# cc_panels

./: README.md
security-apps/: cc-security-apps-panel.c  cc-security-apps-panel.h  gnome-security-apps-panel.desktop.in.in  meson.build
security-framework/: cc-security-framework-panel.c  cc-security-framework-panel.h  meson.build  security-framework.gresource.xml  security-framework.ui
